# antifa

./: .gitignore  Cargo.toml  README.md
scripts/: build-windows.sh
src/: app.rs  main.rs  messaging.rs  p2p.rs  tor.rs  video.rs
