[package]
name = "antifa"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arti-client = { version = "0.22", features = ["keymgr", "onion-service-client", "onion-service-service", "static-sqlite", "tokio"] }
bincode = "1"
egui = "0.28"
futures-util = "0.3"
rand = "0.8"
ring = "0.17"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tor-cell = "0.22"
tor-hsservice = "0.22"
tor-proto = { version = "0.22", features = ["tokio"] }
tor-rtcompat = { version = "0.22", features = ["tokio"] }
x25519-dalek = "2"

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.28", default-features = false, features = ["wgpu", "wayland", "x11"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
eframe = { version = "0.28", default-features = false, features = ["wgpu"] }
